--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>SchreibCode Video</title>
-    <link rel="icon" href="./img/icon-filled.png">
-    <link rel="stylesheet" href="./src/schreibcode.css">
-    <link rel="stylesheet" href="./src/flexbox.css">
-</head>
-<body>
-    <div class="header-video">
-        <h1>CSS Grid</h1>
-    </div>
-    <div class="container">
-        <div class="item bg-primary">1</div>
-        <div class="item bg-blue">2</div>
-        <div class="item bg-red">3</div>
-        <div class="item bg-yellow">4</div>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>SchreibCode Video</title>
+        <link rel="icon" href="./img/icon-filled.png" />
+        <link rel="stylesheet" href="./src/schreibcode.css" />
+        <script defer src="./src/json-beispiele.js"></script>
+    </head>
+    <body>
+        <div class="header-video">
+            <h1>JSON</h1>
+        </div>
+    </body>
 </html>
