--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>SchreibCode Video</title>
         <link rel="icon" href="./img/icon-filled.png" />
         <link rel="stylesheet" href="./src/schreibcode.css" />
-        <script defer src="./src/json-beispiele.js"></script>
+        <script defer src="./src/index.js"></script>
     </head>
     <body>
         <div class="header-video">
